--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ yarn-debug.log
 # Ignore Docker option files
 docker-compose.override.yml
 
+# Ignore specific sound files
+public/sounds/*.mp3
+public/sounds/*.ogg
+
+public/google*
