--- a/config/settings.yml
+++ b/config/settings.yml
@@ -31,7 +31,7 @@ defaults: &defaults
   reduce_motion: false
   system_font_ui: false
   noindex: false
-  theme: 'default'
+  theme: 'custom'
   notification_emails:
     follow: false
     reblog: false
